# AgentBench

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  run.py  run_audio.py
.github/workflows/: agent-comment-runner.yml  agent-issue-runner.yml  runner-env-info.yml
agentbench/: __init__.py  audio_config.py  audio_runner.py  config.py  runner.py
agentbench/evaluators/: __init__.py  audio_evaluator.py  base.py  llm_judge.py
agentbench/models/: __init__.py  anthropic_model.py  base.py  openai_model.py  openrouter_model.py
agentbench/models/audio/: __init__.py  base.py  gemini_tts_model.py  minimax_music_model.py  openai_tts_model.py
agentbench/tasks/: __init__.py  audio_loader.py  base.py  loader.py
benchmarks/: asmr_audio.json  text_generation.json
docs/: evaluation_roadmap.md
docs/proposals/: asmr_audio_benchmark_proposal.md
